Fix white space at bottom of AllItems page

--- a/src/features/AllItems/AllItems.mod.scss
+++ b/src/features/AllItems/AllItems.mod.scss
@@ -1,6 +1,6 @@
 .allItemsPage {
   max-width: 1500px;
-  margin: 32px auto;
-  padding: 0 15px;
+  margin: 0 auto;
+  padding: 32px 15px;
   box-sizing: border-box;
 }
